# engytita

./: Makefile  README.md  pom.xml
scripts/: kind-with-registry.sh
test/client/: pom.xml
test/client/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native
test/client/src/main/envoy/: envoy.yaml
test/client/src/main/infinispan/: infinispan.xml
test/client/src/main/jbang/: loadtest.java
test/client/src/main/resources/: application.properties
test/data/: Dockerfile  db.sql
test/deploy/: client.yaml  postgres.yaml  server.yaml
test/deploy/app/: client.yaml  kustomization.yaml
test/deploy/app/base/: airport_server.yaml  client.yaml  kustomization.yaml
test/deploy/app/kind/: kustomization.yaml  node_port.yaml
test/deploy/app/openshift/: kustomization.yaml  route.yaml
test/deploy/data/: infinispan.yaml  kustomization.yaml  postgres.yaml  redis.yaml
test/filter/: Cargo.toml  Dockerfile  Dockerfile.local  README.md
test/filter/config/: envoy-filter-wasi.yaml  envoy-filter.yaml
test/filter/src/: lib.rs
test/proxy/: README.md  pom.xml
test/proxy/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native-micro
test/proxy/src/main/java/io/engytita/proxy/: Address.java  ConnectionContext.java  HandlerProvider.java  Protocols.java  Proxy.java  ProxyApp.java  ProxyConfig.java  ProxyInitializer.java  ProxyMaster.java  ProxyStatus.java  (+2 more)
test/server/: pom.xml
test/server/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native
test/server/src/main/resources/: application.properties
(+71 files in other folders)
